@@ -1,0 +1,7 @@
+{
+  "variants": {
+    "": {
+      "model": "bygone:block/verdigris_scrap_block"
+    }
+  }
+}
