@@ -167,6 +167,9 @@
   "block.bygone.ancient_hanging_sign": "Ancient Hanging Sign",
   "block.bygone.ancient_wall_hanging_sign": "Ancient Wall Hanging Sign",
 
+  "block.bygone.verdigris_block": "Verdigris Block",
+  "block.bygone.verdigris_scrap_block": "Verdigris Scrap Block",
+
   "block.bygone.malachite": "Malachite",
   "block.bygone.malachite_chiseled": "Chiseled Malachite",
   "block.bygone.malachite_pillar": "Malachite Pillar",
