@@ -1,0 +1,3 @@
+{
+  "parent": "bygone:block/verdigris_scrap_block"
+}
