@@ -1,0 +1,20 @@
+{
+  "type": "minecraft:crafting_shaped",
+  "category": "equipment",
+  "key": {
+    "#": {
+      "item": "bygone:verdigris_ingot"
+    },
+    "I": {
+      "item": "minecraft:blaze_rod"
+    }
+  },
+  "pattern": [
+    " # ",
+    " I "
+  ],
+  "result": {
+    "count": 1,
+    "id": "bygone:ancient_hook"
+  }
+}
