@@ -48,7 +48,8 @@
       "minecraft:underwater_magma",
       "minecraft:disk_sand",
       "bygone:disk_test",
-      "bygone:disk_gravel"
+      "bygone:disk_gravel",
+      "bygone:ore_verdigris"
     ],
     [],
     [
