@@ -52,6 +52,7 @@
       "bygone:ore_iron_middle",
       "bygone:ore_iron_small",
       "bygone:ore_copper",
+      "bygone:ore_verdigris",
       "bygone:orange_mushroom_shelf",
       "bygone:pink_mushroom_shelf",
       "bygone:purple_mushroom_shelf"
