@@ -51,7 +51,8 @@
       "bygone:ore_iron_upper",
       "bygone:ore_iron_middle",
       "bygone:ore_iron_small",
-      "bygone:ore_copper"
+      "bygone:ore_copper",
+      "bygone:ore_verdigris"
     ],
     [],
     [],
