@@ -1,7 +1,6 @@
 {
   "replace": false,
   "values": [
-
     "bygone:ancient_planks"
   ]
 }
